testdata/support_bundle/yamls/cluster/admissionregistration.k8s.io/v1/validatingadmissionpolicies.yaml
apiVersion: v1
items:
- apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingAdmissionPolicy
  metadata:
    annotations:
      meta.helm.sh/release-name: harvester
      meta.helm.sh/release-namespace: harvester-system
      objectset.rio.cattle.io/id: default-mcc-harvester-cattle-fleet-local-system
    creationTimestamp: "2025-12-30T21:49:31Z"
    generation: 1
    labels:
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: harvester
      app.kubernetes.io/version: v1.7.0
      helm.sh/chart: harvester-1.7.0
      helm.sh/release: harvester
      objectset.rio.cattle.io/hash: e852fa897f5eae59a44b4bfe186aad80b10b94b3
    managedFields:
    - apiVersion: admissionregistration.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:observedGeneration: {}
          f:typeChecking: {}
      manager: validatingadmissionpolicy-status
      operation: Apply
      subresource: status
      time: "2025-12-30T21:49:31Z"
    - apiVersion: admissionregistration.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:meta.helm.sh/release-name: {}
            f:meta.helm.sh/release-namespace: {}
            f:objectset.rio.cattle.io/id: {}
          f:labels:
            .: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/part-of: {}
            f:app.kubernetes.io/version: {}
            f:helm.sh/chart: {}
            f:helm.sh/release: {}
            f:objectset.rio.cattle.io/hash: {}
        f:spec:
          f:failurePolicy: {}
          f:matchConditions:
            .: {}
            k:{"name":"skip-if-upgrading-from-1.4-or-older"}:
              .: {}
              f:expression: {}
              f:name: {}
          f:matchConstraints: {}
          f:validations: {}
          f:variables:
            .: {}
            k:{"name":"newClusterDNS"}: {}
            k:{"name":"newPodCIDR"}: {}
            k:{"name":"newServiceCIDR"}: {}
            k:{"name":"oldClusterDNS"}: {}
            k:{"name":"oldPodCIDR"}: {}
            k:{"name":"oldServiceCIDR"}: {}
      manager: fleetagent
      operation: Update
      time: "2025-12-30T21:49:31Z"
    name: harvester-immutable-promote-cidr
    resourceVersion: "4028"
    uid: 07a7aa9d-56f8-42c4-929b-eacc5efa35e1
  spec:
    failurePolicy: Fail
    matchConditions:
    - expression: '''promote'' in oldObject.spec.values'
      name: skip-if-upgrading-from-1.4-or-older
    matchConstraints:
      matchPolicy: Equivalent
      namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - fleet-local
      objectSelector: {}
      resourceRules:
      - apiGroups:
        - management.cattle.io
        apiVersions:
        - v3
        operations:
        - UPDATE
        resourceNames:
        - harvester
        resources:
        - managedcharts
        scope: Namespaced
    validations:
    - expression: |-
        (variables.oldPodCIDR == "" || variables.newPodCIDR == variables.oldPodCIDR) &&
        (variables.oldServiceCIDR == "" || variables.newServiceCIDR == variables.oldServiceCIDR )&&
        (variables.oldClusterDNS == "" || variables.newClusterDNS == variables.oldClusterDNS)
      messageExpression: |-
        'the promote CIDRs configuration is immutable. ' +
        'clusterCIDR: ' + variables.oldPodCIDR + ' => ' + variables.newPodCIDR + ', ' +
        'serviceCIDR:' + variables.oldServiceCIDR + ' => ' + variables.newServiceCIDR + ', ' +
        'clusterDNS: ' + variables.oldClusterDNS + ' => ' + variables.newClusterDNS
      reason: Invalid
    variables:
    - expression: '''clusterPodCIDR'' in object.spec.values.promote ? object.spec.values.promote.clusterPodCIDR
        : '''''
      name: newPodCIDR
    - expression: '''clusterPodCIDR'' in oldObject.spec.values.promote ? oldObject.spec.values.promote.clusterPodCIDR
        : '''''
      name: oldPodCIDR
    - expression: '''clusterServiceCIDR'' in object.spec.values.promote ? object.spec.values.promote.clusterServiceCIDR
        : '''''
      name: newServiceCIDR
    - expression: '''clusterServiceCIDR'' in oldObject.spec.values.promote ? oldObject.spec.values.promote.clusterServiceCIDR
        : '''''
      name: oldServiceCIDR
    - expression: '''clusterDNS'' in object.spec.values.promote ? object.spec.values.promote.clusterDNS
        : '''''
      name: newClusterDNS
    - expression: '''clusterDNS'' in oldObject.spec.values.promote ? oldObject.spec.values.promote.clusterDNS
        : '''''
      name: oldClusterDNS
  status:
    observedGeneration: 1
    typeChecking: {}
- apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingAdmissionPolicy
  metadata:
    annotations:
      kubevirt.io/generation: "3"
      kubevirt.io/install-strategy-identifier: b0bdb51f9c5fb273f28ae187010768729d661564
      kubevirt.io/install-strategy-registry: registry.suse.com/suse/sles/15.7
      kubevirt.io/install-strategy-version: 1.6.3-150700.3.13.1
    creationTimestamp: "2025-12-30T21:50:04Z"
    generation: 1
    labels:
      app.kubernetes.io/component: kubevirt
      app.kubernetes.io/managed-by: virt-operator
    managedFields:
    - apiVersion: admissionregistration.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:observedGeneration: {}
          f:typeChecking: {}
      manager: validatingadmissionpolicy-status
      operation: Apply
      subresource: status
      time: "2025-12-30T21:50:04Z"
    - apiVersion: admissionregistration.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubevirt.io/generation: {}
            f:kubevirt.io/install-strategy-identifier: {}
            f:kubevirt.io/install-strategy-registry: {}
            f:kubevirt.io/install-strategy-version: {}
          f:labels:
            .: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/managed-by: {}
        f:spec:
          f:failurePolicy: {}
          f:matchConditions:
            .: {}
            k:{"name":"virt-handler-user-only"}:
              .: {}
              f:expression: {}
              f:name: {}
          f:matchConstraints: {}
          f:validations: {}
          f:variables:
            .: {}
            k:{"name":"newAnnotations"}: {}
            k:{"name":"newLabels"}: {}
            k:{"name":"newNonKubevirtAnnotations"}: {}
            k:{"name":"newNonKubevirtLabels"}: {}
            k:{"name":"oldAnnotations"}: {}
            k:{"name":"oldLabels"}: {}
            k:{"name":"oldNonKubevirtAnnotations"}: {}
            k:{"name":"oldNonKubevirtLabels"}: {}
      manager: virt-operator
      operation: Update
      time: "2025-12-30T21:50:45Z"
    name: kubevirt-node-restriction-policy
    resourceVersion: "6718"
    uid: fd3d3196-754f-4860-a19d-3cf3114579e2
  spec:
    failurePolicy: Fail
    matchConditions:
    - expression: request.userInfo.username == "system:serviceaccount:harvester-system:kubevirt-handler"null
      name: virt-handler-user-only
    matchConstraints:
      matchPolicy: Equivalent
      namespaceSelector: {}
      objectSelector: {}
      resourceRules:
      - apiGroups:
        - "null"
        apiVersions:
        - '*'
        operations:
        - UPDATE
        resources:
        - nodes
        scope: '*'
    validations:
    - expression: object.spec == oldObject.spec
      message: this user cannot modify spec of node
      reason: Forbidden
    - expression: oldObject.metadata.filter(k, k != "labels" && k != "annotations"
        && k != "managedFields" && k != "resourceVersion").all(k, k in object.metadata)
        && object.metadata.filter(k, k != "labels" && k != "annotations" && k != "managedFields"
        && k != "resourceVersion").all(k, k in oldObject.metadata && oldObject.metadata[k]
        == object.metadata[k])
      message: this user can only change allowed metadata fields
      reason: Forbidden
    - expression: size(variables.newNonKubevirtLabels) == size(variables.oldNonKubevirtLabels)
      message: this user cannot add/delete non kubevirt-owned labels
      reason: Forbidden
    - expression: variables.newNonKubevirtLabels.all(k, k in variables.oldNonKubevirtLabels
        && variables.newLabels[k] == variables.oldLabels[k])
      message: this user cannot update non kubevirt-owned labels
      reason: Forbidden
    - expression: size(variables.newNonKubevirtAnnotations) == size(variables.oldNonKubevirtAnnotations)
      message: this user cannot add/delete non kubevirt-owned annotations
      reason: Forbidden
    - expression: variables.newNonKubevirtAnnotations.all(k, k in variables.oldNonKubevirtAnnotations
        && variables.newAnnotations[k] == variables.oldAnnotations[k])
      message: this user cannot update non kubevirt-owned annotations
      reason: Forbidden
    variables:
    - expression: oldObject.metadata.labels.filter(k, !k.contains("kubevirt.io") &&
        k != "cpumanager")
      name: oldNonKubevirtLabels
    - expression: oldObject.metadata.labels
      name: oldLabels
    - expression: object.metadata.labels.filter(k, !k.contains("kubevirt.io") && k
        != "cpumanager")
      name: newNonKubevirtLabels
    - expression: object.metadata.labels
      name: newLabels
    - expression: oldObject.metadata.annotations.filter(k, !k.contains("kubevirt.io"))
      name: oldNonKubevirtAnnotations
    - expression: object.metadata.annotations.filter(k, !k.contains("kubevirt.io"))
      name: newNonKubevirtAnnotations
    - expression: oldObject.metadata.annotations
      name: oldAnnotations
    - expression: object.metadata.annotations
      name: newAnnotations
  status:
    observedGeneration: 1
    typeChecking: {}
kind: List
metadata:
  resourceVersion: "14450"
